--- a/addImage.html
+++ b/addImage.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Image</title>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <input type="file" />
+      <button>Add</button>
+    </form>
+    <script src="addImage.js"></script>
+  </body>
 </html>
