--- a/login.html
+++ b/login.html
@@ -6,5 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
   </head>
-  <body></body>
+  <body>
+    <form action="">
+      <input name="email" />
+      <input name="password" />
+      <button>Login</button>
+    </form>
+    <script src="login.js">
+        
+    </script>
+  </body>
 </html>
